scope permissions properly and add auth swagger
